--- a/portfolio.html
+++ b/portfolio.html
@@ -1,98 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Adnan Muhtadi Portfolio</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Adnan Muhtadi Portfolio</title>
+</head>
 
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+<body>
 
-        <!-- font awesome for icons -->
-        <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
-
-        <!-- CSS only -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    </head>
-
-    <body>
-
-        <!--        navigation bar with the active class when on the actual page  -->
-        <header>
-            <a href="index.html">
-                <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
-            </a>
-
-            <nav>
-                <ul id="navbar-menu">
-                    <li>
-                        <a href="connect.html">Connect</a>
-                    </li>
-
-                    <li>
-                        <a class="active" href="portfolio.html">Portfolio</a>
-                    </li>
-
-                    <li>
-                        <a href="journey.html">My Journey</a>
-                    </li>
-
-                </ul>
-            </nav>
-        </header>
-
-
-        <!--image header of the page-->
-        <section id="main-space">
-                <div class="row header-section">
-                    <div class="col-lg-12 col-md-12 main-image4">
-                        <img class="main-image3" src="assets/images/projects.jpg" alt="profile backing">
-                    </div>
+    <!--        navigation bar with the active class when on the actual page  -->
+    <nav>
+        <div class="row nav-section nav">
+            <div class="col-4 col-lg-4 nav-link mainhome">
+                <h1><a href="index.html">Adnan Muhtadi</a></h1>
             </div>
+
+            <div class="col-1 col-lg-1"></div>
+            <div class="col-1 col-lg-1"></div>
+
+            <div class="col-2 col-lg-2 col-sm-2 right">
+                <h2><a href="journey.html">My Journey</a></h2>
+            </div>
+
+            <div class="col-2 col-lg-2 active right">
+                <h2><a href="portfolio.html">My Portfolio</a></h2>
+            </div>
+
+            <div class="col-2 col-lg-2 right">
+                <h2><a href="connect.html">Connect</a></h2>
+            </div>
+        </div>
+    </nav>
+
+
+    <!--image header of the page-->
+    <header>
+        <div class="row no-gutter header-section">
+            <div class="col-lg-12 bg-image3"></div>
+        </div>
+    </header>
+
+    <!--   the section where the content of my journey would be placed -->
+    <div class="main-section">
+        <h1 class="title">Project Profolio</h1>
+        <!-- having dates, places of where it took place, and my roles-->
+        <section class="row col-12 portfolio-thumbs">
+           
+            <div class="col-3">
+                <div class="card">
+                    <a href="#" target="_blank">
+                    <img src="assets/images/love-running.jpg" alt="#" class="timage"></a>                    
+                    <div class="container-thumb">
+                        <h4><b>Love Running</b></h4>
+                        <p>To create a scheduled based for individuals who would like to run as well as a photo gallery to show the fun that is part of the group.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card">
+                    <a href="#" target="_blank">
+                        <img src="assets/images/stream.jpg" alt="#" class="timage"></a>                    
+                    <div class="container-thumb">
+                        <h4><b>Stream</b></h4>
+                        <p>To educate individuals how to program as well as well as short cuts to different online tools that is involved in building websites </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card">
+                    <a href="#" target="_blank">
+                        <img src="assets/images/whisky.jpg" alt="#" class="timage"></a>                    
+                    <div class="container-thumb">
+                        <h4><b>Whisky Drop</b></h4>
+                        <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscritpion.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-3">
+                <div class="card">
+                    <a href="#" target="_blank">
+                        <img src="assets/images/resume.jpg" alt="#" class="timage"></a>                    
+                    <div class="container-thumb">
+                        <h4><b>Rosie Resume</b></h4>
+                        <p>To create an online Resume for Rosie which show tells her skills as have access to her CV. With quick links to her soical media. </p>
+                    </div>
+                </div>
+            </div>
+
+
         </section>
-
-        <!--   the section where the content of my journey would be placed -->
-        <section id="about-me">
-
-        </section>
+    </div>
 
 
-        <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
-        <footer class="footer-brief">
-            <div class="row no-gutter footer-container">
-
-                <!--splitting the section focusing on the quck links -->
-                <div class="col-12 col-md-4 quick-links">
-
-                    <h5 id="qlabels">Quick Links</h5>
-                    <div class="qlinks">
-                        <a href="contact_me.html" class="foot-email">
-                            <h5 id="email_address_head">Home</h5>
-                        </a>
-
-                        <a href="my_projects.html" class="foot-projects">
-                            <h5 id="project_footer_head">My Journey</h5>
-                        </a>
-
-                        <a href="my_projects.html" class="foot-projects">
-                            <h5 id="project_footer_head">Portfolio</h5>
-                        </a>
-
-                        <a href="my_projects.html" class="foot-projects">
-                            <h5 id="project_footer_head">Connect</h5>
-                        </a>
-
+    <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
+    <footer>
+        <div class="footer-section">
+            <div class="row">
+                <div class="col-lg-4 quicklinks">
+                    <h4>Quick Links</h4>
+                    <div class="row">
+                        <div class="col col-lg-6">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="col col-lg-6">
+                            <a href="#">Portfolio</a>
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="col col-lg-6">
+                            <a href="#">My Journey</a>
+                        </div>
+                        <div class="col col-lg-6">
+                            <a href="#">Connect</a>
+                        </div>
                     </div>
                 </div>
 
-                <!--splitting the section focusing on the social links using the icons from font awesome-->
-                <div class="col-12 col-md-4 social_links">
-                    <h5 id="qlabels">Let's Connect</h5>
-
-                    <div class="logos">
-
+                <div class="col-lg-4 connect">
+                    <h4>Lets Connect</h4>
+                    <div class="social-logos">
                         <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
 
                         <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -108,22 +140,20 @@
                         <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
 
                         <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+
                     </div>
-
                 </div>
-                <!--splitting the section focusing on the CV download -->
-                <div class="col-12 col-md-4">
 
-                    <h5 id="qlabels">Take A Copy Of My CV!</h5>
-                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">
-                        <div class="logos">
-                            <i class="fas fa-file" aria-hidden="true"></i>
-                        </div>
-                    </a>
+
+
+                <div class="col-lg-4 mycv">
+                    <h4>Take A Copy Of My CV!</h4>
+                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file" aria-hidden="true"></i></a>
                 </div>
             </div>
-        </footer>
+        </div>
 
-    </body>
+    </footer>
+</body>
 
 </html>
