--- a/portfolio.html
+++ b/portfolio.html
@@ -48,56 +48,67 @@
     <div class="main-section">
         <h1 class="title">Project Profolio</h1>
         <!-- having dates, places of where it took place, and my roles-->
+
+        <div class="col-lg-12 projects">
+            <p>A placeholder for all developed sites to advertise the skills that i have gained and areas that </p>
+        </div>
+
         <section class="row col-12 portfolio-thumbs">
-           
-            <div class="col-3">
+
+            <div class="col-3 col-md-6">
                 <div class="card">
-                    <a href="#" target="_blank">
-                    <img src="assets/images/love-running.jpg" alt="#" class="timage"></a>                    
+                    <a href="assets/portfolio-sites/love-running/index.html" target="_blank">
+                        <img src="assets/images/love-running.jpg" alt="#" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Love Running</b></h4>
-                        <p>To create a scheduled based for individuals who would like to run as well as a photo gallery to show the fun that is part of the group.</p>
+                        <p>A scheduled based for individuals who would like to run as well as a photo gallery to show the fun that is part of the group.</p>
                     </div>
+                    <a href="assets/portfolio-sites/love-running/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
                 </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-3 col-md-6">
                 <div class="card">
-                    <a href="#" target="_blank">
-                        <img src="assets/images/stream.jpg" alt="#" class="timage"></a>                    
+                    <a href="assets/portfolio-sites/stream/index.html" target="_blank">
+                        <img src="assets/images/stream.jpg" alt="#" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Stream</b></h4>
                         <p>To educate individuals how to program as well as well as short cuts to different online tools that is involved in building websites </p>
                     </div>
+                    <a href="assets/portfolio-sites/stream/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
                 </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-3 col-md-6">
                 <div class="card">
-                    <a href="#" target="_blank">
-                        <img src="assets/images/whisky.jpg" alt="#" class="timage"></a>                    
+                    <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank">
+                        <img src="assets/images/whisky.jpg" alt="#" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Whisky Drop</b></h4>
                         <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscritpion.</p>
                     </div>
+                    <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
                 </div>
             </div>
-            
-            <div class="col-3">
+
+            <div class="col-3 col-md-6">
                 <div class="card">
-                    <a href="#" target="_blank">
-                        <img src="assets/images/resume.jpg" alt="#" class="timage"></a>                    
+                    <a href="assets/portfolio-sites/resume-project/index.html" target="_blank">
+                        <img src="assets/images/resume.jpg" alt="#" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Rosie Resume</b></h4>
                         <p>To create an online Resume for Rosie which show tells her skills as have access to her CV. With quick links to her soical media. </p>
                     </div>
+                    <a href="assets/portfolio-sites/resume-project/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
                 </div>
             </div>
 
 
         </section>
     </div>
-
+    <br>
+    <br>
+    <br>
 
     <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
     <footer>
@@ -107,17 +118,17 @@
                     <h4>Quick Links</h4>
                     <div class="row">
                         <div class="col col-lg-6">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </div>
                         <div class="col col-lg-6">
-                            <a href="#">Portfolio</a>
+                            <a href="portfolio.html">Portfolio</a>
                         </div>
                         <div class="w-100"></div>
                         <div class="col col-lg-6">
-                            <a href="#">My Journey</a>
+                            <a href="journey.html">My Journey</a>
                         </div>
                         <div class="col col-lg-6">
-                            <a href="#">Connect</a>
+                            <a href="connect.html">Connect</a>
                         </div>
                     </div>
                 </div>
