--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         </div>
     </nav>
 
-
+    <!--image header of the page-->
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-12 col-lg-12 col-md-12 bg-image1"></div>
-            <div class="col-12 col-lg-12">
-                <img class="profile-pic" src="assets/images/me.jpg" alt="Profile Picture">
-                <h2>Project Manager / Trainee Full Stack Developer</h2>
-                <h3>Personal Portfolio</h3>
-            </div>
+            <div class="col-lg-12 bg-image1"></div>
+                <div class="col-12 col-lg-12 col-md-12 profile-pic1">
+                    <img class="profile-pic2" src="assets/images/me.jpg" alt="Profile Picture">
+                    <h2>Project Manager / Trainee Full Stack Developer</h2>
+                    <h3>Personal Portfolio</h3>
+                </div>
         </div>
     </header>
 
@@ -112,27 +112,27 @@
     <footer>
         <div class="footer-section">
             <div class="row">
-                <div class="col-lg-4 quicklinks">
+                <div class="col-lg-4 col-md-3 quicklinks">
                     <h4>Quick Links</h4>
                     <div class="row">
-                        <div class="col col-lg-6">
-                            <a href="#">Home</a>
+                        <div class="col col-lg-6 col-md-12">
+                            <a href="index.html">Home</a>
                         </div>
-                        <div class="col col-lg-6">
-                            <a href="#">Portfolio</a>
+                        <div class="col col-lg-6 col-md-12">
+                            <a href="portfolio.html">Portfolio</a>
                         </div>
                         <div class="w-100"></div>
-                        <div class="col col-lg-6">
-                            <a href="#">My Journey</a>
+                        <div class="col col-lg-6 col-md-12">
+                            <a href="journey.html">My Journey</a>
                         </div>
-                        <div class="col col-lg-6">
-                            <a href="#">Connect</a>
+                        <div class="col col-lg-6 col-md-12">
+                            <a href="connect.html">Connect</a>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="col-lg-4 connect">
+                <div class="col-lg-4 col-md-6 connect">
                     <h4>Lets Connect</h4>
                     <div class="social-logos">
                         <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -154,9 +154,9 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 mycv">
+                <div class="col-lg-4 col-md-3 mycv">
                     <h4>Take A Copy Of My CV!</h4>
-                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file" aria-hidden="true"></i></a>
+                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file cv" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
