--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <div class="col-1 col-lg-1"></div>
             <div class="col-1 col-lg-1"></div>
 
-            <div class="col-2 col-lg-2 col-sm-2 right">
+            <div class="col-2 col-lg-2 right">
                 <h2><a href="journey.html">My Journey</a></h2>
             </div>
 
@@ -55,7 +55,7 @@
 
         <section class="row col-12 portfolio-thumbs">
 
-            <div class="col-3 col-md-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/love-running/index.html" target="_blank">
                         <img src="assets/images/love-running.jpg" alt="#" class="timage"></a>
@@ -67,7 +67,7 @@
                 </div>
             </div>
 
-            <div class="col-3 col-md-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/stream/index.html" target="_blank">
                         <img src="assets/images/stream.jpg" alt="#" class="timage"></a>
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            <div class="col-3 col-md-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank">
                         <img src="assets/images/whisky.jpg" alt="#" class="timage"></a>
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="col-3 col-md-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/resume-project/index.html" target="_blank">
                         <img src="assets/images/resume.jpg" alt="#" class="timage"></a>
@@ -114,26 +114,27 @@
     <footer>
         <div class="footer-section">
             <div class="row">
-                <div class="col-lg-4 quicklinks">
+                <div class="col-lg-4 col-md-3 quicklinks">
                     <h4>Quick Links</h4>
                     <div class="row">
-                        <div class="col col-lg-6">
+                        <div class="col col-lg-6 col-md-12">
                             <a href="index.html">Home</a>
                         </div>
-                        <div class="col col-lg-6">
+                        <div class="col col-lg-6 col-md-12">
                             <a href="portfolio.html">Portfolio</a>
                         </div>
                         <div class="w-100"></div>
-                        <div class="col col-lg-6">
+                        <div class="col col-lg-6 col-md-12">
                             <a href="journey.html">My Journey</a>
                         </div>
-                        <div class="col col-lg-6">
+                        <div class="col col-lg-6 col-md-12">
                             <a href="connect.html">Connect</a>
                         </div>
                     </div>
+
                 </div>
 
-                <div class="col-lg-4 connect">
+                <div class="col-lg-4 col-md-6 connect">
                     <h4>Lets Connect</h4>
                     <div class="social-logos">
                         <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -155,11 +156,9 @@
                     </div>
                 </div>
 
-
-
-                <div class="col-lg-4 mycv">
+                <div class="col-lg-4 col-md-3 mycv">
                     <h4>Take A Copy Of My CV!</h4>
-                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file" aria-hidden="true"></i></a>
+                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file cv" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
